--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&family=Work+Sans:wght@200&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+
 body {
     background: #98d4e6;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 200;
+    color: #006377;
 }
