--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,11 @@ h1, h2 {
     font-family: 'Work Sans', sans-serif;
     font-weight: 200;
     letter-spacing: 1px;
-    margin: 30px;
+    margin: 40px;
+}
+
+h2 {
+    margin-bottom: 80px;
 }
 
 a {
@@ -57,4 +61,10 @@ a {
     background: url('../images/carsimages_family.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
+}
+
+#cars-continer {
+    display: flex;
+    width: 80%;
+    margin: auto;
 }
