--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,15 @@ h2 {
     margin-bottom: 80px;
 }
 
+h3 {
+    text-align: center;
+    font-family: 'Source Sans', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin: 20px;
+}
+
+
 a {
     text-decoration: none;
     color: #006377;
@@ -65,6 +74,8 @@ a {
 
 #cars-continer {
     display: flex;
-    width: 80%;
+    flex-wrap: wrap;
+    width: 90%;
     margin: auto;
+    gap: 4rem;
 }
