--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,30 +91,30 @@ a {
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,66,79); 
+    background-color: rgba(0,66,79,0.5); 
+  }     
   
-  /* Modal Content/Box */
+  /* Modal displaying range results */
   .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: #def0f7;
+    margin: 25% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 70%; 
   }
   
-  /* The Close Button */
+  /* Button to close range results modal */
   .close {
-    color: #aaa;
+    color: #006377;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -122,7 +122,7 @@ a {
   
   .close:hover,
   .close:focus {
-    color: black;
+    color: #98d4e6;
     text-decoration: none;
     cursor: pointer;
   }
