--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,9 @@ a {
     margin: 25% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 70%; 
+    border-radius: 10px;
+    width: 40%; 
+    height: 600px;
   }
   
   /* Button to close range results modal */
@@ -163,4 +165,13 @@ a {
     color: #98d4e6;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  #display_results {
+    font-family: 'Work Sans', sans-serif;
+    margin-top: 20px;
+    padding: 5px 15px 5px 10px;
+    text-align: center;
+    font-size: 115%;
+    letter-spacing: 1px;
   }
