--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@ body {
 
 /* main heading */
 
-h1, h2 {
+h1,
+h2 {
     text-align: center;
     font-family: 'Work Sans', sans-serif;
     font-weight: 200;
@@ -94,6 +95,7 @@ a {
     opacity: 0.7;
     box-shadow: 0px 0px 20px 20px #fff;
 }
+
 /* form section */
 
 #form-section {
@@ -129,49 +131,56 @@ a {
 
 /* The Modal (background) */
 .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,66,79); 
-    background-color: rgba(0,66,79,0.5); 
-  }     
-  
-  /* Modal displaying range results */
-  .modal-content {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 66, 79);
+    background-color: rgba(0, 66, 79, 0.5);
+}
+
+/* Modal displaying range results */
+.modal-content {
     background-color: #def0f7;
-    margin: 15% auto; 
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     border-radius: 10px;
-    width: 40%; 
+    width: 40%;
     height: 600px;
-  }
-  
-  /* Button to close range results modal */
-  .close {
+}
+
+/* Google map of charging points */
+#map-iframe {
+    height: 300px;
+    width: 100%;
+    margin-top: 40px;
+}
+
+/* Button to close range results modal */
+.close {
     color: #006377;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: #98d4e6;
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
-  .modaltext {
+.modaltext {
     font-family: 'Work Sans', sans-serif;
     margin-top: 20px;
     padding: 5px 15px 5px 10px;
     text-align: center;
     font-size: 115%;
     letter-spacing: 1px;
-  }
+}
