--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&family=Work+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&family=Work+Sans:wght@300&family=Zen+Dots&display=swap');
 
 * {
     margin: 0;
@@ -20,7 +20,7 @@ h2 {
     font-family: 'Work Sans', sans-serif;
     font-weight: 200;
     letter-spacing: 1px;
-    margin: 40px;
+    margin: 30px;
 }
 
 h2 {
@@ -29,12 +29,11 @@ h2 {
 
 h3 {
     text-align: center;
-    font-family: 'Source Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
-    margin: 20px;
+    margin: 15px;
 }
-
 
 a {
     text-decoration: none;
@@ -100,15 +99,23 @@ a {
 
 #form-section {
     font-family: 'Work Sans', sans-serif;
-    font-size: 125%;
+    font-size: 115%;
     line-height: 230%;
     margin: 20px auto;
     color: #006377;
-    background-color: rgba(222, 240, 247, 0.7);
+    background-color: #d9eef6;
     max-width: 400px;
     left: 8%;
     padding: 20px;
+    border: solid 3px #fff;
     border-radius: 20px;
+}
+
+#white_underline {
+    width: 100%;
+    height: 3px;
+    margin: 5px auto;
+    background-color: #fff;
 }
 
 #calculate_button {
@@ -116,18 +123,42 @@ a {
     margin-top: 20px;
     padding: 5px 15px 5px 10px;
     text-align: center;
-    font-size: 115%;
+    font-size: 105%;
     letter-spacing: 1px;
-    background-color: #006377;
+    background-color: #6ec3dc;
     color: #fff;
     border-radius: 6px;
+    box-shadow: 2px 2px 4px #00788f;
 }
 
 #calculate_button:hover {
-    background-color: #98d4e6;
+    background-color: #aeddea;
     color: #006377;
+    box-shadow: none;
 }
 
+select {
+    font-family: 'Work Sans', sans-serif;
+    color: #006377;
+    font-size: 95%;
+}
+
+input[type="radio"] {
+    background-color: #98d4e6;
+    margin: 5px;
+    font: inherit;
+    color: #006377;
+    width: .9em;
+    height: .9em;
+    border: 0.3em solid #00788f;
+    border-radius: 50%;
+  }
+
+#currcharge {
+    font-family: 'Work Sans', sans-serif;
+    color: #006377;
+    font-size: 95%;
+}
 
 /* The Modal for Results (background) */
 .modal {
