--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ input[type="radio"] {
 #map-iframe {
     height: 350px;
     width: 100%;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 /* Button to close range results modal */
@@ -214,10 +214,14 @@ input[type="radio"] {
 .modaltext {
     font-family: 'Work Sans', sans-serif;
     margin-top: 20px;
-    padding: 5px 15px 5px 10px;
+    padding: 5px 5px 5px 10px;
     text-align: center;
-    font-size: 115%;
+    font-size: 135%;
     letter-spacing: 1px;
+}
+
+#display_rechargemessage {
+    font-size: 90%;
 }
 
 /* Media queries */
