Add link back to main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,20 @@ a {
     font-size: 120%;
 }
 
-#alertmessage {
+a:hover {
+    color: #6ec3dc;
+}
+
+#backtomainlink {
     font-size: 70%;
+}
+
+#backtomainlink:hover {
+    color: #6ec3dc;
+}
+
+i {
+    margin: 5px;
 }
 
 /* circle images of cars */
@@ -142,23 +154,23 @@ a {
 }
 
 #reset_button {
-        font-family: 'Work Sans', sans-serif;
-        margin: 20px;
-        padding: 5px 15px 5px 10px;
-        text-align: center;
-        font-size: 105%;
-        letter-spacing: 1px;
-        background-color: #888;
-        color: #fff;
-        border-radius: 6px;
-        box-shadow: 2px 2px 4px #00788f;
-    }
-    
-    #calculate_button:hover {
-        background-color: #6ec3dc;
-        color: #006377;
-        box-shadow: none;
-    }
+    font-family: 'Work Sans', sans-serif;
+    margin: 20px 20px 20px 50px;
+    padding: 5px 15px 5px 10px;
+    text-align: center;
+    font-size: 105%;
+    letter-spacing: 1px;
+    background-color: #888;
+    color: #fff;
+    border-radius: 6px;
+    box-shadow: 2px 2px 4px #00788f;
+}
+
+#reset_button:hover {
+    background-color: #6ec3dc;
+    color: #006377;
+    box-shadow: none;
+}
 
 select {
     font-family: 'Work Sans', sans-serif;
