--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ i {
     border-radius: 20px;
 }
 
-#white_underline {
+.white_underline {
     width: 100%;
     height: 3px;
     margin: 5px auto;
